# agentchat

./: .env.example  AGENTS.md  README.md  SKILLS.md  pyproject.toml
agentchat/: __init__.py  agents.py  config.py  council.py  main.py  schemas.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts
static/: app.js  index.html  styles.css
