[project]
name = "agentchat"
version = "0.1.0"
description = "A LiteLLM-powered multi-agent council chat with a live visualization UI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "litellm>=1.72.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "uvicorn[standard]>=0.32.0"
]

[project.scripts]
agentchat = "agentchat.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentchat"]
